prepare version 3.9.8